--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
 
     <section class="hero-section">
-        <img src="img/hero-chandora.png" alt="CHANDORA Schmuck an asiatischem Model" class="hero-image"
+        <img src="img/hero-chandora.png" alt="CHANDORA Schmuck an schwarzen Model" class="hero-image"
             loading="eager" />
     </section>
     <!-- PRODUKTSEKTION -->
@@ -55,13 +55,13 @@
             <!-- Produkt 1 -->
             <article class="product-card reveal-on-scroll" data-product-id="lolli-pop-charm">
                 <div class="product-image-wrapper">
-                    <img src="img/charm-lolli.png" alt="Lolli Pop Charm" class="product-image" />
-                    <button class="product-like-button" type="button" aria-label="Lolli Pop Charm liken">
+                    <img src="img/charm-heartfelt.png" alt="Heart Felt Charm" class="product-image" />
+                    <button class="product-like-button" type="button" aria-label="Heart Felt Charm liken">
                         <img src="img/icon-heart.png" alt="" class="product-like-icon" />
                     </button>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Lolli Pop Charm</h3>
+                    <h3 class="product-name">Heart Felt Charm</h3>
                     <p class="product-price">0,99 €</p>
                 </div>
             </article>
