--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
     </header>
 
     <section class="hero-section">
-        <img src="img/hero-chandora.png" alt="CHANDORA Schmuck an schwarzen Model" class="hero-image"
-            loading="eager" />
+        <img src="img/hero-chandora.png" alt="CHANDORA Schmuck an schwarzen Model" class="hero-image" loading="eager" />
     </section>
     <!-- PRODUKTSEKTION -->
     <section class="product-section">
         <div class="product-grid">
 
             <!-- Produkt 1 -->
-            <article class="product-card reveal-on-scroll" data-product-id="lolli-pop-charm">
+            <article class="product-card reveal-on-scroll" data-product-id="heart-felt-charm">
                 <div class="product-image-wrapper">
                     <img src="img/charm-heartfelt.png" alt="Heart Felt Charm" class="product-image" />
                     <button class="product-like-button" type="button" aria-label="Heart Felt Charm liken">
@@ -67,43 +66,43 @@
             </article>
 
             <!-- Produkt 2 -->
-            <article class="product-card reveal-on-scroll" data-product-id="ice-cream-charm">
+            <article class="product-card reveal-on-scroll" data-product-id="bow-tied-charm">
                 <div class="product-image-wrapper">
-                    <img src="img/charm-icecream.png" alt="Ice Cream Charm" class="product-image" />
-                    <button class="product-like-button" type="button" aria-label="Ice Cream Charm liken">
+                    <img src="img/charm-bow-tied.png" alt="Bow - Tied Charm" class="product-image" />
+                    <button class="product-like-button" type="button" aria-label="Bow - Tied Charm liken">
                         <img src="img/icon-heart.png" alt="" class="product-like-icon" />
                     </button>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Ice Cream Charm</h3>
+                    <h3 class="product-name">Bow - Tied Charm</h3>
                     <p class="product-price">0,99 €</p>
                 </div>
             </article>
 
             <!-- Produkt 3 -->
-            <article class="product-card reveal-on-scroll" data-product-id="candy-cloud-charm">
+            <article class="product-card reveal-on-scroll" data-product-id="cake-that-charm">
                 <div class="product-image-wrapper">
-                    <img src="img/charm-cloud.png" alt="Candy Cloud Charm" class="product-image" />
-                    <button class="product-like-button" type="button" aria-label="Candy Cloud Charm liken">
+                    <img src="img/charm-cake.png" alt="Cake That Charm" class="product-image" />
+                    <button class="product-like-button" type="button" aria-label="Cake That Charm liken">
                         <img src="img/icon-heart.png" alt="" class="product-like-icon" />
                     </button>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Candy Cloud Charm</h3>
+                    <h3 class="product-name">Cake That Charm</h3>
                     <p class="product-price">0,99 €</p>
                 </div>
             </article>
 
             <!-- Produkt 4 -->
-            <article class="product-card reveal-on-scroll" data-product-id="gum-drop-charm">
+            <article class="product-card reveal-on-scroll" data-product-id="flower-bloom-charm">
                 <div class="product-image-wrapper">
-                    <img src="img/charm-gumdrop.png" alt="Gum Drop Charm" class="product-image" />
-                    <button class="product-like-button" type="button" aria-label="Gum Drop Charm liken">
+                    <img src="img/charm-flower.png" alt="Flower - Bloom Charm" class="product-image" />
+                    <button class="product-like-button" type="button" aria-label="Flower - Bloom Charm liken">
                         <img src="img/icon-heart.png" alt="" class="product-like-icon" />
                     </button>
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">Gum Drop Charm</h3>
+                    <h3 class="product-name">Flower - Bloom Charm</h3>
                     <p class="product-price">0,99 €</p>
                 </div>
             </article>
@@ -135,51 +134,51 @@
         </div>
         </div>
     </section>
-    <!-- ===== NOSTALGIA KOLLEKTION ===== -->
-    <section class="nostalgia-section reveal-on-scroll" id="nostalgia">
-        <div class="nostalgia-inner">
+    <!-- ===== dorea KOLLEKTION ===== -->
+    <section class="dorea-section reveal-on-scroll" id="dorea">
+        <div class="dorea-inner">
             <!-- LINKS -->
-            <div class="nostalgia-left">
-                <h2 class="nostalgia-title">Nostalgia Kollektion</h2>
+            <div class="dorea-left">
+                <h2 class="dorea-title">Dorea Kollektion</h2>
 
-                <div class="nostalgia-image">
-                    <img src="img/nostalgia-bracelet.png" alt="Nostalgia Kollektion" />
+                <div class="dorea-image">
+                    <img src="img/dorea-bracelet.png" alt="dorea Kollektion" />
                 </div>
 
-                <p class="nostalgia-text">
-                    Jeder Charm erzählt eine Geschichte – von sonnigen Nachmittagen mit klebrigen Fingern, vom ersten
-                    Kirmesbesuch,
-                    vom süßen Duft von Zuckerwatte in der Luft. Von bunten Bonbons in der Hosentasche bis hin zu
-                    leuchtenden Augen,
-                    wenn man die Lieblingssüßigkeit entdeckte.
+                <p class="dorea-text">
+                    Jeder Charm ist ein Geschenk – für Menschen, die uns am Herzen liegen.
+                    Für gemeinsame Momente, leise Gesten und große Gefühle.
+                    Dorea erzählt von Freundschaft, Familie und Liebe, vom Schenken ohne Anlass und vom Teilen von
+                    Freude.
+
                 </p>
             </div>
 
             <!-- RECHTS -->
-            <div class="nostalgia-right">
-                <div class="nostalgia-product-grid">
+            <div class="dorea-right">
+                <div class="dorea-product-grid">
                     <!-- ===== DESKTOP PRODUKTE (werden auf Mobile ausgeblendet) ===== -->
-                    <article class="nostalgia-product-card only-desktop">
-                        <div class="nostalgia-product-image-wrapper">
-                            <button class="product-like-button" type="button" data-product-id="nost-lolli"
-                                aria-label="Lolli Pop Charm liken">
+                    <article class="dorea-product-card only-desktop">
+                        <div class="dorea-product-image-wrapper">
+                            <button class="product-like-button" type="button" data-product-id="nost-heart"
+                                aria-label="Heart Felt Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-lolli.png" alt="Lolli Pop Charm" />
+                            <img class="dorea-product-image" src="img/charm-heartfelt.png" alt="Heart Felt Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Lolli Pop Charm</p>
+                            <p class="product-name">Heart Felt Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
 
-                    <article class="nostalgia-product-card only-desktop">
-                        <div class="nostalgia-product-image-wrapper">
+                    <article class="dorea-product-card only-desktop">
+                        <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-ice"
                                 aria-label="Ice Cream Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-icecream.png" alt="Ice Cream Charm" />
+                            <img class="dorea-product-image" src="img/charm-icecream.png" alt="Ice Cream Charm" />
                         </div>
                         <div class="product-info">
                             <p class="product-name">Ice Cream Charm</p>
@@ -187,13 +186,13 @@
                         </div>
                     </article>
 
-                    <article class="nostalgia-product-card only-desktop">
-                        <div class="nostalgia-product-image-wrapper">
+                    <article class="dorea-product-card only-desktop">
+                        <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-cloud"
                                 aria-label="Candy Cloud Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-cloud.png" alt="Candy Cloud Charm" />
+                            <img class="dorea-product-image" src="img/charm-cloud.png" alt="Candy Cloud Charm" />
                         </div>
                         <div class="product-info">
                             <p class="product-name">Candy Cloud Charm</p>
@@ -201,13 +200,13 @@
                         </div>
                     </article>
 
-                    <article class="nostalgia-product-card only-desktop">
-                        <div class="nostalgia-product-image-wrapper">
+                    <article class="dorea-product-card only-desktop">
+                        <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-gum"
                                 aria-label="Gum Drop Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-gumdrop.png" alt="Gum Drop Charm" />
+                            <img class="dorea-product-image" src="img/charm-gumdrop.png" alt="Gum Drop Charm" />
                         </div>
                         <div class="product-info">
                             <p class="product-name">Gum Drop Charm</p>
@@ -215,13 +214,13 @@
                         </div>
                     </article>
 
-                    <article class="nostalgia-product-card only-desktop">
-                        <div class="nostalgia-product-image-wrapper">
+                    <article class="dorea-product-card only-desktop">
+                        <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-rainbow"
                                 aria-label="Rainbow Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-rainbow.png" alt="Rainbow Charm" />
+                            <img class="dorea-product-image" src="img/charm-rainbow.png" alt="Rainbow Charm" />
                         </div>
                         <div class="product-info">
                             <p class="product-name">Rainbow Charm</p>
@@ -229,14 +228,13 @@
                         </div>
                     </article>
 
-                    <article class="nostalgia-product-card only-desktop">
-                        <div class="nostalgia-product-image-wrapper">
+                    <article class="dorea-product-card only-desktop">
+                        <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-teddy"
                                 aria-label="Teddy Treat Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-teddy-treat.png"
-                                alt="Teddy Treat Charm" />
+                            <img class="dorea-product-image" src="img/charm-teddy-treat.png" alt="Teddy Treat Charm" />
                         </div>
                         <div class="product-info">
                             <p class="product-name">Teddy Treat Charm</p>
@@ -245,13 +243,13 @@
                     </article>
 
                     <!-- ===== MOBILE PRODUKTE (nur auf Mobile sichtbar) ===== -->
-                    <article class="nostalgia-product-card only-mobile">
-                        <div class="nostalgia-product-image-wrapper">
+                    <article class="dorea-product-card only-mobile">
+                        <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-rainbow"
                                 aria-label="Rainbow Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-rainbow.png" alt="Rainbow Charm" />
+                            <img class="dorea-product-image" src="img/charm-rainbow.png" alt="Rainbow Charm" />
                         </div>
                         <div class="product-info">
                             <p class="product-name">Rainbow Charm</p>
@@ -259,14 +257,13 @@
                         </div>
                     </article>
 
-                    <article class="nostalgia-product-card only-mobile">
-                        <div class="nostalgia-product-image-wrapper">
+                    <article class="dorea-product-card only-mobile">
+                        <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-teddy"
                                 aria-label="Teddy Treat Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-teddy-treat.png"
-                                alt="Teddy Treat Charm" />
+                            <img class="dorea-product-image" src="img/charm-teddy-treat.png" alt="Teddy Treat Charm" />
                         </div>
                         <div class="product-info">
                             <p class="product-name">Teddy Treat Charm</p>
@@ -274,13 +271,13 @@
                         </div>
                     </article>
 
-                    <article class="nostalgia-product-card only-mobile">
-                        <div class="nostalgia-product-image-wrapper">
+                    <article class="dorea-product-card only-mobile">
+                        <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-cotton"
                                 aria-label="Cotton Candy Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-cotton-candy.png"
+                            <img class="dorea-product-image" src="img/charm-cotton-candy.png"
                                 alt="Cotton Candy Charm" />
                         </div>
                         <div class="product-info">
@@ -289,13 +286,13 @@
                         </div>
                     </article>
 
-                    <article class="nostalgia-product-card only-mobile">
-                        <div class="nostalgia-product-image-wrapper">
+                    <article class="dorea-product-card only-mobile">
+                        <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-popcorn"
                                 aria-label="Popcorn Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="nostalgia-product-image" src="img/charm-popcorn.png" alt="Popcorn Charm" />
+                            <img class="dorea-product-image" src="img/charm-popcorn.png" alt="Popcorn Charm" />
                         </div>
                         <div class="product-info">
                             <p class="product-name">Popcorn Charm</p>
@@ -305,7 +302,7 @@
                 </div>
 
                 <!-- Desktop Button (verschwindet auf Mobile) -->
-                <a class="nostalgia-more-link" href="#shop">Mehr Entdecken&nbsp;›</a>
+                <a class="dorea-more-link" href="#shop">Mehr Entdecken&nbsp;›</a>
             </div>
         </div>
     </section>
@@ -362,7 +359,7 @@
     </section>
     <section class="bracelet-section reveal-on-scroll" id="bracelet">
         <div class="bracelet-image-wrapper">
-            <img src="img/bracelet-nostalgia.png" alt="Armband mit süßen Charms" class="bracelet-image" />
+            <img src="img/bracelet-dorea.png" alt="Armband mit süßen Charms" class="bracelet-image" />
         </div>
 
         <div class="bracelet-content">
