--- a/index.html
+++ b/index.html
@@ -174,70 +174,70 @@
 
                     <article class="dorea-product-card only-desktop">
                         <div class="dorea-product-image-wrapper">
-                            <button class="product-like-button" type="button" data-product-id="nost-ice"
-                                aria-label="Ice Cream Charm liken">
+                            <button class="product-like-button" type="button" data-product-id="nost-bow"
+                                aria-label="Bow - Tied Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="dorea-product-image" src="img/charm-icecream.png" alt="Ice Cream Charm" />
+                            <img class="dorea-product-image" src="img/charm-bow-tied.png" alt="Bow - Tied Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Ice Cream Charm</p>
+                            <p class="product-name">Bow - Tied Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
 
                     <article class="dorea-product-card only-desktop">
                         <div class="dorea-product-image-wrapper">
-                            <button class="product-like-button" type="button" data-product-id="nost-cloud"
-                                aria-label="Candy Cloud Charm liken">
+                            <button class="product-like-button" type="button" data-product-id="nost-cake"
+                                aria-label="Cake That Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="dorea-product-image" src="img/charm-cloud.png" alt="Candy Cloud Charm" />
+                            <img class="dorea-product-image" src="img/charm-cake.png" alt="Cake That Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Candy Cloud Charm</p>
+                            <p class="product-name">Cake That Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
 
                     <article class="dorea-product-card only-desktop">
                         <div class="dorea-product-image-wrapper">
-                            <button class="product-like-button" type="button" data-product-id="nost-gum"
-                                aria-label="Gum Drop Charm liken">
+                            <button class="product-like-button" type="button" data-product-id="nost-flower"
+                                aria-label="Flower - Bloom Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="dorea-product-image" src="img/charm-gumdrop.png" alt="Gum Drop Charm" />
+                            <img class="dorea-product-image" src="img/charm-flower.png" alt="Flower - Bloom Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Gum Drop Charm</p>
+                            <p class="product-name">Flower - Bloom Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
 
                     <article class="dorea-product-card only-desktop">
                         <div class="dorea-product-image-wrapper">
-                            <button class="product-like-button" type="button" data-product-id="nost-rainbow"
-                                aria-label="Rainbow Charm liken">
+                            <button class="product-like-button" type="button" data-product-id="nost-Message Me"
+                                aria-label="Message Me Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="dorea-product-image" src="img/charm-rainbow.png" alt="Rainbow Charm" />
+                            <img class="dorea-product-image" src="img/charm-brief.png" alt="Message Me Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Rainbow Charm</p>
+                            <p class="product-name">"Message Me" Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
 
                     <article class="dorea-product-card only-desktop">
                         <div class="dorea-product-image-wrapper">
-                            <button class="product-like-button" type="button" data-product-id="nost-teddy"
-                                aria-label="Teddy Treat Charm liken">
+                            <button class="product-like-button" type="button" data-product-id="nost-eudara"
+                                aria-label="Eudara Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="dorea-product-image" src="img/charm-teddy-treat.png" alt="Teddy Treat Charm" />
+                            <img class="dorea-product-image" src="img/charm-present-box.png" alt="Eudara Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Teddy Treat Charm</p>
+                            <p class="product-name">Eudara Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
@@ -245,28 +245,28 @@
                     <!-- ===== MOBILE PRODUKTE (nur auf Mobile sichtbar) ===== -->
                     <article class="dorea-product-card only-mobile">
                         <div class="dorea-product-image-wrapper">
-                            <button class="product-like-button" type="button" data-product-id="nost-rainbow"
-                                aria-label="Rainbow Charm liken">
+                            <button class="product-like-button" type="button" data-product-id="nost-message Me"
+                                aria-label="Message Me Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="dorea-product-image" src="img/charm-rainbow.png" alt="Rainbow Charm" />
+                            <img class="dorea-product-image" src="img/charm-brief.png" alt="Message Me Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Rainbow Charm</p>
+                            <p class="product-name">"Message Me" Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
 
                     <article class="dorea-product-card only-mobile">
                         <div class="dorea-product-image-wrapper">
-                            <button class="product-like-button" type="button" data-product-id="nost-teddy"
-                                aria-label="Teddy Treat Charm liken">
+                            <button class="product-like-button" type="button" data-product-id="nost-eudara"
+                                aria-label="Eudara Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="dorea-product-image" src="img/charm-teddy-treat.png" alt="Teddy Treat Charm" />
+                            <img class="dorea-product-image" src="img/charm-present-box.png" alt="Eudara Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Teddy Treat Charm</p>
+                            <p class="product-name">Eudara Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
@@ -274,28 +274,28 @@
                     <article class="dorea-product-card only-mobile">
                         <div class="dorea-product-image-wrapper">
                             <button class="product-like-button" type="button" data-product-id="nost-cotton"
-                                aria-label="Cotton Candy Charm liken">
+                                aria-label="Star Dust Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="dorea-product-image" src="img/charm-cotton-candy.png"
-                                alt="Cotton Candy Charm" />
+                            <img class="dorea-product-image" src="img/charm-stardust.png"
+                                alt="Star Dust Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Cotton Candy Charm</p>
+                            <p class="product-name">Star Dust Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
 
                     <article class="dorea-product-card only-mobile">
                         <div class="dorea-product-image-wrapper">
-                            <button class="product-like-button" type="button" data-product-id="nost-popcorn"
-                                aria-label="Popcorn Charm liken">
+                            <button class="product-like-button" type="button" data-product-id="nost-Diara"
+                                aria-label="Diara Charm liken">
                                 <img class="product-like-icon" src="img/icon-heart.png" alt="" />
                             </button>
-                            <img class="dorea-product-image" src="img/charm-popcorn.png" alt="Popcorn Charm" />
+                            <img class="dorea-product-image" src="img/charm-diamand.png" alt="Diara Charm" />
                         </div>
                         <div class="product-info">
-                            <p class="product-name">Popcorn Charm</p>
+                            <p class="product-name">Diara Charm</p>
                             <p class="product-price">0,99 €</p>
                         </div>
                     </article>
@@ -306,6 +306,7 @@
             </div>
         </div>
     </section>
+    
     <section class="how-section reveal-on-scroll">
         <div class="how-inner">
             <!-- Überschrift kommt im DOM VOR dem Bild,
